--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,11 @@ a:hover
 }
 body
 {
+  margin: 0;
+  padding: 0;
   font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
-  background-color: #F0E36B;
+  background-color: #262626;
+  color: white;
 }
 
 .initPosition
@@ -30,4 +33,23 @@ body
   z-index: 1;
   margin-right: 0px;
 }
-
+h1
+{
+  text-align: center;
+}
+.loader{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loader h1
+{
+  visibility: hidden;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+  font-size: 10em;
+  color: rgba(255,255,255,.1);
+}
